# csda-toolkit

./: .env.example  .gitignore  README.md  alembic.ini  architecture.md  compose.yml  database.md  docker.md  project-state.md  pyproject.toml  schema-0002-team-context-proposal.md  schema-0003-lineups-roster-history-proposal.md  schema-0005-classification-team-hierarchy-proposal.md  schema-visualizer.md
.sisyphus/plans/: csda-toolkit.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_events_series_classifications.py  0003_round_side_map.py  0004_weapons.py  0005_weapon_damage_stats.py  0006_kill_steam_ids.py  0007_remove_prw_defindex_fk.py  0008_add_created_at_to_all_tables.py  0009_event_data_ingest.py  0011_grenade_trajectory_summaries.py
docs/: database_tracking.md  hltv_rating_formula.md  role-quality-formulas.md
scripts/: ingest_one.py  run_classifiers.py
src/csda_toolkit/: __init__.py  _version.py
src/csda_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/csda_toolkit/classifiers/: __init__.py  drop_classifier.py  economy.py  hltv_rating.py  movement_storage.py  (+6 more)
tests/: test_csda_parser.py  test_db_models.py  test_domain_models.py  test_drop_classifier.py  test_economy_classifier.py  test_equipment_enrichment.py  test_hltv_adapter.py  test_hltv_match_integration.py  test_hltv_rating.py  test_movement_storage.py  test_position_classifier.py  test_role_classifier.py  test_round_archetype.py  test_side_assignment.py  test_tactical_signals.py  test_taxonomy.py  test_utility_classifier.py  test_version.py  test_weapon_wiring.py
tests/fixtures/: event_page.html  events_listing.html
weaponData/: CS2 Weapon Spreadsheet (Last Weapon Update_ March 18, 2026) - Simple.csv
(+20 files in other folders)
