[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csda-toolkit"
version = "0.1.0"
description = "Python toolkit for CS2 demo analysis — built on demoparser"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "TroyD9241" },
]

dependencies = [
    "demoparser2>=0.41",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "click>=8.0",
    "pydantic>=2.0",
    "pandas>=1.5",
    "numpy>=1.24",
]

[project.scripts]
csda = "csda_toolkit.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["csda_toolkit*"]
